# pho

./: .gitignore  Cargo.toml  README.md  build.rs
res/: fo_hash.json  get.json  so_hash.json
src/: generate.rs  hash.rs  lang.rs  main.rs  phash.rs
test_data/: test.txt
