[package]
name = "pho"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# For flamegraph
debug = true
lto = false
codegen-units = 1

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
strfmt = "0.2.5"
